# Orange

./: .gitignore  .gitmodules  PROJECT_STATE.md  README.md  meson.build  orange.conf
assets/desktop/: images.desktop  pdf-document.desktop
docs/: APPMENU.md  ARCHITECTURE.md  REQUIREMENTS.md  RESEARCH.md  VOID_VM.md
include/orange/: assets.h  buffer.h  compositor.h  config.h  desktop.h  desktop_entry.h  dock.h  glass.h  launcher.h  menubar.h  notifications.h  session_services.h  shell.h  status_notifier.h  util.h  widget_data.h  widgets.h
include/tahoe/: assets.h  buffer.h  compositor.h  config.h  desktop_entry.h  shell.h
packaging/void/: README.md
packaging/void/srcpkgs/gdm/patches/: 0001-allow-temp-reauth-from-login-screen.patch
packaging/void/srcpkgs/orange/: template
packaging/void/srcpkgs/orange/files/: INSTALL.msg  LICENSE  gdm-custom.conf  gdm-pam  orange-session  orange-setup.sh  orange.desktop
packaging/void/srcpkgs/orange/files/gdm/: run
scripts/: build-orange-package.sh  build-vm.sh  build-void-vm.sh  orange-appmenu-sandbox-setup.sh  orange-setup.sh  run-vm.sh  run-void-vm.sh
src/: about_app.c  assets.c  buffer.c  compositor.c  config.c  desktop.c  desktop_entry.c  dock.c  glass.c  launcher.c  main.c  menubar.c  notifications.c  session_services.c  settings_app.c  shell.c  widget_data.c  widgets.c
tests/: test_assets.c  test_config.c  test_desktop.c  test_desktop_entry.c  test_notifications.c  test_session_services.c  test_shell_layout.c  test_shell_visual.c  test_widget_data.c
themes/MacTahoe-Dark/: index.theme
themes/MacTahoe-Dark/gtk-2.0/: menubar-toolbar.rc  panel.rc
themes/MacTahoe-Dark/metacity-1/: metacity-theme-1.xml
themes/MacTahoe-Light/: index.theme
themes/MacTahoe-Light/metacity-1/: metacity-theme-1.xml
themes/OrangeGTK-dark/gtk-4.0/: gtk.css
themes/OrangeGTK/gtk-4.0/: gtk.css
themes/OrangeIcons/: index.theme
themes/TahoeGTK-dark/gtk-4.0/: gtk.css
themes/TahoeGTK/gtk-4.0/: gtk.css
themes/TahoeIcons/: index.theme
tools/: fetch_context_menu_icons.sh  generate_orange_assets.sh  generate_tahoe_assets.sh  populate_icon_theme.sh  render_shell.c
